image dir error fixed

--- a/Client/index.html
+++ b/Client/index.html
@@ -63,19 +63,19 @@
         <li>
           <a href="https://ir.linkedin.com/in/mohammad-hosein-parvini-413a36268?original_referer=https%3A%2F%2Fwww.linkedin.com%2F"
             target="_blank" rel="noopener noreferrer">
-            <img src="images/linkedinIcon.png" alt="LinkedIn Icon" class="contact-icon" />
+            <img src="/Client/src/assets/images/linkedinIcon.png" alt="LinkedIn Icon" class="contact-icon" />
             LinkedIn
           </a>
         </li>
         <li>
           <a href="https://github.com/parvini82" target="_blank" rel="noopener noreferrer">
-            <img src="images/githubIcon.png" alt="GitHub Icon" class="contact-icon" />
+            <img src="/Client/src/assets/images/githubIcon.png" alt="GitHub Icon" class="contact-icon" />
             GitHub
           </a>
         </li>
         <li>
           <a href="https://www.instagram.com/itz.pal" target="_blank" rel="noopener noreferrer">
-            <img src="images/instagramIcon.png" alt="Instagram Icon" class="contact-icon" />
+            <img src="/Client/src/assets/images/instagramIcon.png" alt="Instagram Icon" class="contact-icon" />
             Instagram
           </a>
         </li>
