--- a/Client/index.html
+++ b/Client/index.html
@@ -17,7 +17,7 @@
   <div>
     <div id="header">
       <header class="topnav">
-        <img src="images/logo-color.png" class="logo"></img>
+        <img src="src/assets/images/logo-color.png" class="logo"></img>
         <div class="navbar" style="justify-content: right;">
           <a class="nav active" onclick="showContent('home')">Home</a>
           <a class="nav" onclick="showContent('contact')">Contact</a>
@@ -63,19 +63,19 @@
         <li>
           <a href="https://ir.linkedin.com/in/mohammad-hosein-parvini-413a36268?original_referer=https%3A%2F%2Fwww.linkedin.com%2F"
             target="_blank" rel="noopener noreferrer">
-            <img src="/Client/src/assets/images/linkedinIcon.png" alt="LinkedIn Icon" class="contact-icon" />
+            <img src="/src/assets/images/linkedinIcon.png" alt="LinkedIn Icon" class="contact-icon" />
             LinkedIn
           </a>
         </li>
         <li>
           <a href="https://github.com/parvini82" target="_blank" rel="noopener noreferrer">
-            <img src="/Client/src/assets/images/githubIcon.png" alt="GitHub Icon" class="contact-icon" />
+            <img src="/src/assets/images/githubIcon.png" alt="GitHub Icon" class="contact-icon" />
             GitHub
           </a>
         </li>
         <li>
           <a href="https://www.instagram.com/itz.pal" target="_blank" rel="noopener noreferrer">
-            <img src="/Client/src/assets/images/instagramIcon.png" alt="Instagram Icon" class="contact-icon" />
+            <img src="/src/assets/images/instagramIcon.png" alt="Instagram Icon" class="contact-icon" />
             Instagram
           </a>
         </li>
