--- a/Client/index.html
+++ b/Client/index.html
@@ -6,9 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>MyBlog - Developed by Mohammad Hosein Parvini</title>
-  <link href="src/index.scss" rel="stylesheet">
+  <link href="src/assets/styles/index.scss" rel="stylesheet">
   <script type="module" src="/src/main.tsx"></script>
-  <script src="src/scripts/showContent.js"></script>
+  <script src="src/assets/scripts/showContent.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
@@ -28,7 +28,7 @@
 
 
     <div id="home">
-      <h1>Welcome</h1>
+      <!-- <h1>Welcome</h1>
       <p>Hello, dear visitor! My name is mohammad, and I'm delighted to welcome you to my blog. I'm currently a student
         pursuing a degree in Computer Engineering at KNTU University.
 
@@ -44,7 +44,7 @@
         software development. Feel free to explore the content and leave your comments or questions — I'd love to
         connect with you!
 
-        Thank you for visiting, and I hope you find something valuable here. Stay tuned for more exciting content!</p>
+        Thank you for visiting, and I hope you find something valuable here. Stay tuned for more exciting content!</p> -->
     </div>
 
     <div id="about">
