--- a/Client/index.html
+++ b/Client/index.html
@@ -61,10 +61,7 @@
 
         Thank you for visiting, and I hope you find something valuable here. Stay tuned for more exciting content!</p> -->
     </div>
-    <div id="about">hi 
-
-    </div>
-  
+    
 
 
     <div id="contact">
@@ -104,6 +101,7 @@
 
 
     </div>
+    <div id="posts"></div>
 
 
     <div id="root"></div>
